# gules

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURE_SUMMARY.md  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  test.yml
crates/gules/: Cargo.toml  README.md
crates/gules/src/: extended_commands.rs  lib.rs  main.rs
crates/gules/src/commands/: cache.rs  filter_activities.rs  mod.rs
crates/gules/src/mcp/: extended_server.rs  extended_tools.rs  mod.rs
crates/gules/tests/: extended_commands_tests.rs  filter_activities_tests.rs  filter_real_data_test.rs
crates/jules-cli/: Cargo.toml  README.md
crates/jules-cli/src/: lib.rs
crates/jules-cli/src/commands/: active.rs  activities.rs  activity.rs  approve_plan.rs  completed.rs  config_cmd.rs  create.rs  failed.rs  mod.rs  send_message.rs  session.rs  sessions.rs  source.rs  sources.rs
crates/jules-cli/tests/: args_tests.rs
crates/jules-core/: Cargo.toml
crates/jules-core/src/: activity_cache.rs  config.rs  display.rs  lib.rs
crates/jules-core/tests/: activity_cache_tests.rs
crates/jules-mcp/: Cargo.toml  README.md
crates/jules-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
crates/jules-mcp/tests/: tools_args_tests.rs
crates/jules-rs/: Cargo.toml  LICENSE  README.md
crates/jules-rs/src/: client.rs  lib.rs
crates/jules-rs/src/types/: activity.rs  common.rs  error.rs  mod.rs  session.rs  source.rs
crates/jules-rs/tests/: api_completeness.rs  deserialize_sample_test.rs  integration_test.rs  quick_validate.rs
docs/: COMMANDS.md  MCP.md  README.md
jules_api_docs/jules/api/: api.md
jules_api_docs/jules/api/reference/: rest.md
jules_api_docs/v1alpha/: sessions.activities.md  sessions.md  sources.md
jules_api_docs/v1alpha/sessions/: approvePlan.md  create.md  get.md  list.md  sendMessage.md
jules_api_docs/v1alpha/sessions.activities/: get.md  list.md
jules_api_docs/v1alpha/sources/: get.md  list.md
scripts/: install-hooks.sh  pre-commit.sh  pre-push.sh  trigger-workflow.sh
