[package]
name = "gules"
version = "0.2.3"
edition = "2021"
description = "Extended CLI and MCP server for Google's Jules AI coding agent with GitHub integrations"
authors = ["Kiwina <kiwina@example.com>"]
license = "MIT"
repository = "https://github.com/kiwina/gules"
homepage = "https://github.com/kiwina/gules"
documentation = "https://docs.rs/gules"
keywords = ["jules", "ai", "cli", "mcp", "github"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "gules"
path = "src/main.rs"

[lib]
name = "gules"
path = "src/lib.rs"

[features]
default = []
mcp = ["dep:jules-mcp", "dep:rmcp", "dep:schemars", "dep:serde"]
extended-mcp = ["mcp"]

[dependencies]
jules-rs = { path = "../jules-rs", version = "0.1.1" }
jules-core = { path = "../jules-core", version = "0.1.1" }
jules-cli = { path = "../jules-cli", version = "0.1.0" }
jules-mcp = { path = "../jules-mcp", version = "0.1.0", optional = true }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
serde_json = "1.0"
urlencoding = "2.1"

# MCP dependencies (optional)
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-io", "schemars"], optional = true }
schemars = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
