[package]
name = "jules-core"
version = "0.1.1"
edition = "2021"
description = "Shared utilities for Jules CLI and MCP server"
authors = ["Kiwina <kiwina@example.com>"]
license = "MIT"
repository = "https://github.com/kiwina/gules"
publish = false  # Internal crate, not published

[dependencies]
jules-rs = { path = "../jules-rs", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
comfy-table = "7.1"

[dev-dependencies]
tempfile = "3.8"