[package]
name = "jules-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Google's Jules AI coding agent"
authors = ["Kiwina <kiwina@example.com>"]
license = "MIT"
repository = "https://github.com/kiwina/gules"
homepage = "https://github.com/kiwina/gules/tree/main/crates/jules-mcp"
documentation = "https://docs.rs/jules-mcp"
keywords = ["jules", "ai", "mcp", "coding-agent"]
categories = ["development-tools"]
readme = "README.md"

[[bin]]
name = "jules-mcp"
path = "src/main.rs"

[lib]
name = "jules_mcp"
path = "src/lib.rs"

[dependencies]
jules-rs = { path = "../jules-rs", version = "0.1.0" }
jules-core = { path = "../jules-core", version = "0.1.0" }
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"